--- a/ios/SLP_React/LaunchScreen.storyboard
+++ b/ios/SLP_React/LaunchScreen.storyboard
@@ -17,16 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SLP_React" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="GJd-Yh-RWb">
-                                <rect key="frame" x="0.0" y="202" width="375" height="43"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by React Native" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="MN2-I3-ftu">
-                                <rect key="frame" x="0.0" y="626" width="375" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashScreen" translatesAutoresizingMaskIntoConstraints="NO" id="zWt-fM-3gV">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
@@ -34,16 +24,10 @@
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="MN2-I3-ftu" secondAttribute="bottom" constant="20" id="OZV-Vh-mqD"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="Q3B-4B-g5h"/>
-                            <constraint firstItem="zWt-fM-3gV" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="Q7B-5u-gul"/>
-                            <constraint firstItem="zWt-fM-3gV" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="XQb-Su-26f"/>
-                            <constraint firstItem="MN2-I3-ftu" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="akx-eg-2ui"/>
-                            <constraint firstItem="MN2-I3-ftu" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="i1E-0Y-4RG"/>
-                            <constraint firstItem="zWt-fM-3gV" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="kwt-fl-vTm"/>
-                            <constraint firstItem="zWt-fM-3gV" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" id="l12-eY-6eB"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="bottom" multiplier="1/3" constant="1" id="moa-c2-u7t"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" symbolic="YES" id="x7j-FC-K8j"/>
+                            <constraint firstItem="zWt-fM-3gV" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="Q7B-5u-gul"/>
+                            <constraint firstItem="zWt-fM-3gV" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="XQb-Su-26f"/>
+                            <constraint firstItem="zWt-fM-3gV" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="kwt-fl-vTm"/>
+                            <constraint firstItem="zWt-fM-3gV" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="l12-eY-6eB"/>
                         </constraints>
                     </view>
                 </viewController>
